Started fixing images, created blank block to format spacing

--- a/main.css
+++ b/main.css
@@ -12,24 +12,12 @@ img {
   filter: drop-shadow(5px 5px 5px #222);
 }
 
-
-h2{
-  font-size: 3vw;
-  text-shadow: 2px 2px 4px #e3bb98;
-}
-
-p{
-  font-size: 2vw;
-  text-shadow: 2px 2px 4px #e3bb98;
-}
-
-
 /*!!!!!!!!!!!!!!!!!!!!!!!GRID!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/
 /* rules that I want to use on the parent (container)*/
 
 .grid-parent{
   display: grid;
-  grid-template-columns: repeat(10, 1fr);
+  grid-template-columns: repeat(12, 1fr);
 }
 
 .align-items{
@@ -59,6 +47,8 @@ p{
 .cs-9{grid-column-start: 9}
 .cs-10{grid-column-start: 10}
 .cs-11{grid-column-start: 11}
+.cs-12{grid-column-start: 12}
+.cs-13{grid-column-start: 13}
 
 
 .ce-1{grid-column-end: 1}
@@ -72,6 +62,8 @@ p{
 .ce-9{grid-column-end: 9}
 .ce-10{grid-column-end: 10}
 .ce-11{grid-column-end: 11}
+.ce-12{grid-column-end: 12}
+.ce-13{grid-column-end: 13}
 
 
 
@@ -86,6 +78,8 @@ p{
 .rs-9{grid-row-start: 9}
 .rs-10{grid-row-start: 10}
 .rs-11{grid-row-start: 11}
+.rs-12{grid-row-start: 12}
+.rs-13{grid-row-start: 13}
 
 .re-1{grid-row-end: 1}
 .re-2{grid-row-end: 2}
@@ -98,6 +92,8 @@ p{
 .re-9{grid-row-end: 9}
 .re-10{grid-row-end: 10}
 .re-11{grid-row-end: 11}
+.re-12{grid-row-end: 12}
+.re-13{grid-row-end: 13}
 
 
 img{
